# serverless-poc

./: Jenkinsfile  Jenkinsfile_deploy  README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless-dev.yml  serverless-prod.yml  serverless.yml
cresconet_aws/batch/: __init__.py  base.py
cresconet_aws/database/: __init__.py  base.py
cresconet_aws/ecr/: Dockerfile  __init__.py  base.py
cresconet_aws/lambdas/: __init__.py  base.py
cresconet_aws/metrics/: __init__.py  base.py
cresconet_aws/secrets_manager/: __init__.py  base.py
cresconet_aws/sqs/: __init__.py  base.py
cresconet_aws/support/: __init__.py  base.py
msi_common/: __init__.py  enums.py
msi_common/models/: BaseMeterEvent.py
src/config/: config.py
src/lambdas/: dlc_cancel_override_apigw_fn.py  dlc_cancel_override_statemachine_fn.py  dlc_event_helper.py  dlc_get_request_status.py  dlc_override_apigw_fn.py  dlc_override_statemachine_fn.py  dlc_override_subgrp_fn.py  dlc_override_throttle_fn.py
src/model/: BaseMeterEvent.py  LCMeterEvent.py  enums.py  sm_actions.py
src/resources/sm/: dlc-cancel-override-sm.json  dlc-override-sm.json
src/support/: base.py
src/utils/: aws_utils.py  client.py  kinesis_utils.py  request_validator.py  tracker_utils.py
tests/sample-data/pnet/cmep/: cmep.txt  (+3 more)
tests/soap_files/: PolicyNet.wsdl  include.xsd  soap-encoding.xsd  xmlmime.xsd
tests/unittests/lambdas/: test_dlc_cancel_override_apigw_fn.py  test_dlc_cancel_override_statemachine_fn.py  test_dlc_get_request_status.py  test_dlc_override_apigw_fn.py  test_dlc_override_throttle_fn.py
(+14 files in other folders)
