[tool.poetry]
name = "load-control-grouping"
version = "1.1.0"
description = "Functions for Load Control"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = {extras = ["all"], version = "^2.14.0"}
ratelimiter = "^1.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
lxml = "^4.6.4"
zeep = "^4.1.0"
psycopg2-binary = "^2.9.3"
pytest-cov = "^4.0.0"
pytest-isort = "^3.0.0"
pytest-xdist = "^3.0.0"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.0"
boto3 = "^1.26.0"
urllib3 = "1.26.6"
boto3-type-annotations = "^0.3.1"
iso8601 = "^1.0.0"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Configure PyLint settings.
[tool.pylint.messages_control]

max-line-length = 150  # Set visual line length to same as IntelliJ.
# Disable the 'logging-fstring-interpolation' warning.
disable = ["W1203", "E0213"]
variable-rgx = "[a-z_][a-z0-9_]{0,30}$" # mark variables as len 1 as valid